Fix left margin on tablet and remove sidebar controls

--- a/media/redesign/stylus/wiki.styl
+++ b/media/redesign/stylus/wiki.styl
@@ -487,12 +487,6 @@ span.cke_skin_kuma
     float none
     padding-bottom (grid-spacing * 2)
 
-
-
-
-
-@media media-query-mobile
-  
   #quick-links-toggle,  #wiki-controls
     display none
 
